src/backend/muxml/snapshots/guitar_tab__backend__muxml2__muxml2_tests__muxml_bends.snap
---
source: src/backend/muxml2/muxml2_tests.rs
expression: "String::from_utf8_lossy(&out)"
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE score-partwise PUBLIC "-//Recordare//DTD MusicXML 4.0 Partwise//EN" "http://www.musicxml.org/dtds/partwise.dtd">
<score-partwise version="4.0">
  <identification>
    <encoding>
      <software>guitar_tab</software>
      <supports element="accidental" type="yes"/>
      <supports element="beam" type="yes"/>
      <supports element="print" attribute="new-page" type="no"/>
      <supports element="print" attribute="new-system" type="no"/>
      <supports element="stem" type="yes"/>
    </encoding>
  </identification>
  <part-list>
    <score-part id="P1">
      <part-name>Guitar1</part-name>
    </score-part>
  </part-list>
  <part id="P1">
<measure number="0">
<attributes>
<divisions>2</divisions>
<key><fifths>0</fifths></key>
<time><beats>1</beats><beat-type>4</beat-type></time>
<clef><sign>G</sign><line>2</line></clef>
</attributes>
<note>
<pitch><step>A</step>
<octave>4</octave>
</pitch>
<duration>1</duration>
<type>eighth</type>
<notations>
<slur type="start" number=1" />
</notations>
</note>
<note>
<pitch><step>A</step>
<alter>1</alter>
<octave>4</octave>
</pitch>
<duration>1</duration>
<type>eighth</type>
<accidental>sharp</accidental>
<notations>
<slur type="start" number=1" />
</notations>
</note>
</measure>
</part>
</score-partwise>
